# SMHUB

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  run.sh  vercel.json
backend/: .env.example  Dockerfile  alembic.ini  check_models.py  pyproject.toml  requirements.txt  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 193590a2c807_fix_user_model_fields.py  3b7c3137d8aa_add_reference_models_and_links.py  86c7aeae142e_create_core_tables.py  8f464019c18f_add_material_entities.py  a1b2c3d4e5f6_add_rating_fields_to_materials.py  a7b8c9d0e1f2_create_reports_table.py  b2c3d4e5f6a7_create_ratings_table.py  b8c9d0e1f2a3_create_featured_items_table.py  c0d1e2f3a4b5_create_audit_log_table.py  c1d2e3f4a5b6_remove_moderator_role.py  c2d3e4f5a6b7_relax_program_code_uniqueness.py  d3e4f5a6b7c8_email_confirmation_and_reset.py  d4e5f6a7b8c9_add_is_editorial_to_materials.py  e4f5a6b7c8d9_add_teacher_role_and_role_request.py  e5f6a7b8c9d0_create_user_events_table.py  f6a7b8c9d0e1_create_moderation_log_table.py  f97c737458d8_initial_migration.py
backend/app/: main.py
backend/app/api/: admin.py  audit.py  auth.py  comments.py  courses.py  events.py  featured.py  homepage.py  material_types.py  materials.py  materials_common.py  moderation.py  programs.py  reports.py  subjects.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: bootstrap.py  database.py  obsidian_materials.py  seed.py
backend/app/models/: __init__.py  audit_log.py  comment.py  course.py  (+18 more)
backend/tests/: test_admin_registration.py  test_review_fixes.py
(+75 files in other folders)
