[project]
name = "smhub-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.16.1",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "sqlalchemy==2.0.40",
    "pydantic-settings==2.9.1",
    "psycopg2-binary==2.9.10",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.20",
    "email-validator==2.2.0"
]

[project.scripts]
app = "app.main:app"
